src/App.css
* {
  min-height: 0;
  min-width: 0;
  text-align: center;
}

h1 {
  font-family: 'Montserrat', sans-serif;
  font-weight: 800; 
  text-align: center;
  /* margin: .5em 1em; */
  color: #FF4A45;

}

h3 {
  color: rgb(58, 58, 58);
}

p {
  font-family: "Montserrat", sans-serif;
  font-weight: 300;
  color: rgb(58, 58, 58);
  margin: 1em;
  max-width: 40em;
}

a {
  font-family: "Montserrat", sans-serif;
  font-weight: 500;
  font-size: 1.3em;
  text-transform: uppercase;
  color: rgb(58, 58, 58);
}

a:hover {
  color: rgb(119, 119, 119);
}

.ScrollArrow {
  background-image: url('./img/downArrow.svg');
  max-width: 2em;
  padding: 1em;  
}

.App {
  display: flex;
  flex-direction: column;
  align-items: center;  

}

.Section {

  height: 90vh;
  width: 90vw;

  justify-content: center;
  align-items: center;

  display: flex;
  flex-direction: column;
  align-items: center;
  margin: 2em 0em;
  /* padding: 1em; */

  background-image: -webkit-gradient(linear, left top, right bottom, from(#ACEEE6), to(#ACBCEE));
  background-image: -webkit-linear-gradient(top, start-color, end-color);
  background-image: -moz-linear-gradient(top, start-color, end-color);
  background-image: linear-gradient(to bottom, start-color, end-color);
  box-shadow:  10px 10px 10px grey;
  
}

.Intro {  
  /* justify-content: space-between; */

  height: 100vh;
  width: 100vw;

  margin: 0;

  background-image: url("./img/pattern.svg");
  background-repeat: no-repeat;
  background-size: 100%;
  background-position: 50% 50%;
  background-attachment: fixed;
  background-position: auto; 
  overflow: hidden;

}

.Logo {
  width: 70%;
  max-width: 25em; 

  /* margin-top: 40%; */

}

.About {
  /* padding-top: 4em; */
}

.AboutCont {
  display: flex;
  max-width: 40em;
  flex-direction: column;
  align-items: center;
  padding: 0em 2em;
  justify-content: space-between;

}

.Selfie {
  width: 50%;
  max-width: 13em;
  min-width: 12em;
  border-radius: 10em;
  box-shadow:  5px 5px 5px grey;

}

.AboutMe {
  max-width: 40em;
  margin:
}

.Projects {
  /* justify-content: center; */
  /* height: 100%; */
}

.Carousel {
  width: 80%;
  max-width: 40em;
  /* height: 60%; */
  /* height: 200px; */
  /* padding: 40px; */
  
}

.Slider {
  /* max-width: 40em; */
  /* width: 80%; */
  /* max-height: 30em; */
  
  /* display: flex; */
  /* height: auto; */
  /* align-content: center; */
  /* align-items: center; */
}

.SliderImg {
  width: 100%;
  padding: 1em 0em;
  margin: auto;
  /* height: 5em; */

}

.Tools {
}

.LogoSlider {
  /* box-shadow: inset 1px 4px 9px -6px grey;   */
  max-width: 40em;
  width: 80%;
  display: flex;
}

.logoImg {
  height: 4em;
  margin: 1em;
  align-content: center;
  align-items: center;
  flex-direction: row;
}

.ContactCont {
  /* margin: 2em; */
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  /* font-size: 1em; */
}

.QRimage {
  width: 60%;
  max-width: 7em;
  margin: 1em;
  
}

.ContactLinks {
  display: flex;
  font-size: .8em;
  flex-direction: column;
}

@media (min-width: 567px) {
  .AboutCont {
    flex-direction: row;
  }

  .ContactLinks {
    flex-direction: row;
    justify-content: space-between;  
  }

  .ContactLinks > * {
    margin: 1em;
  }

  .Selfie {
    margin: 1em;
  }

  .ContactCont {
    /* flex-direction: row; */
    /* max-width: 40em; */
    /* justify-content: eve */
    /* margin-right: 9%; */

  }

  /* .SliderText {
    display: none;
  } */

  .SliderImg {
    /* height: auto; */
  }

}

